--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
         <div class="wrapper">
-            <!-- Sidebar -->
+            <!-- Side-bar -->
             <nav id="sidebar">
                 <ul class="list-unstyled components">
                     <li>
